# Genesis-1.3-Version2

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  check.f  diagno.f  esource.f  field.f  genesis.def  incoherent.f  initrun.f  input.cmn  input.f  loadbeam.f  loadrad.f  magfield.f  main.f  mpi_multi.f  mpi_single.f  output.f  partsim.f  pushp.f  rpos.f  scan.f  source.f  stepz.f  tdepend.f  timerec.cmn  timerec.f  track.f
